--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
@@ -34,10 +33,12 @@
   <header id="header" class="d-flex align-items-center ">
     <div class="container-fluid container-xxl d-flex align-items-center">
 
-      <div id="logo" class="me-auto">
+      <div id="logo" class="me-auto" >
+        <a href="https://eduhubcommunity.tech">  <img src="/entrepreneurship-conference/assets/img/logo-bg.png" > </a>
         <!-- Uncomment below if you prefer to use a text logo -->
         <!-- <h1><a href="index.html">The<span>Event</span></a></h1>-->
-        <a href="https://eduhubcommunity.tech" class="scrollto">EduHub Community</a>
+        <!-- <a href="https://eduhubcommunity.tech" class="scrollto">EduHub Community</a> -->
+       
       </div>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
@@ -45,11 +46,13 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#speakers">Speakers</a></li>
           <li><a class="nav-link scrollto" href="#schedule">Schedule</a></li>
-          <li><a class="nav-link scrollto" href="#venue">Venue</a></li>
+          <li><a class="nav-link scrollto" href="#gallery">Collaborators</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
+
+      <a class="buy-tickets scrollto" href="#speakers">Explore our Event</a>
 
     </div>
   </header><!-- End Header -->
@@ -59,8 +62,8 @@
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
       <h1 class="mb-4 pb-0">The International <br><span>Entrepreneurship</span> Conference</h1>
       <p class="mb-4 pb-0">26-28 March 2022, On Virtual Live Conference | To Empower Entrepreneurship across the globe</p>
-      <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a>
-      <a href="#about" class="about-btn scrollto">About The Event</a>
+      <a href="https://youtu.be/bUlPCdeKBi8" class="glightbox play-btn mb-4"></a>
+      <a href="#about" class="about-btn scrollto">About the Event</a>
     </div>
   </section><!-- End Hero Section -->
 
@@ -445,10 +448,39 @@
 
       </div>
 
-    </section><!-- End Schedule Section -->
+    </section>
+    <!-- End Schedule Section -->
+<!-- Community Partners  -->
 
+   <!-- ======= Gallery Section ======= -->
+   <section id="gallery">
+
+    <div class="container" data-aos="fade-up">
+      <div class="section-header">
+        <h2>Our Collaborators</h2>
+        <p>Organizations that believe in our Community </p>
+      </div>
+    </div>
+
+    <div class="gallery-slider swiper">
+      <div class="swiper-wrapper align-items-center">
+        <div class="swiper-slide"><a href="assets/img/logo.png" class="gallery-lightbox"><img src="assets/img/logo.png" class="img-fluid" alt=""></a></div>
+        <div class="swiper-slide"><a href="assets/img/logo.png" class="gallery-lightbox"><img src="assets/img/logo.png" class="img-fluid" alt=""></a></div>
+        <div class="swiper-slide"><a href="assets/img/logo.png" class="gallery-lightbox"><img src="assets/img/gallery/3.jpg" class="img-fluid" alt=""></a></div>
+        <div class="swiper-slide"><a href="assets/img/logo.png" class="gallery-lightbox"><img src="assets/img/gallery/4.jpg" class="img-fluid" alt=""></a></div>
+        <div class="swiper-slide"><a href="assets/img/logo.png" class="gallery-lightbox"><img src="assets/img/gallery/5.jpg" class="img-fluid" alt=""></a></div>
+        <div class="swiper-slide"><a href="assets/img/logo.png" class="gallery-lightbox"><img src="assets/img/gallery/6.jpg" class="img-fluid" alt=""></a></div>
+        <div class="swiper-slide"><a href="assets/img/logo.png" class="gallery-lightbox"><img src="assets/img/gallery/7.jpg" class="img-fluid" alt=""></a></div>
+        <div class="swiper-slide"><a href="assets/img/logo.png" class="gallery-lightbox"><img src="assets/img/gallery/8.jpg" class="img-fluid" alt=""></a></div>
+      </div>
+      <div class="swiper-pagination"></div>
+    </div>
+
+  </section><!-- End Gallery Section -->
+
+<!-- End Community Partners -->
     <!-- ======= Venue Section ======= -->
-    <section id="venue">
+    <!-- <section id="venue">
 
       <div class="container-fluid" data-aos="fade-up">
 
@@ -474,11 +506,12 @@
 
       </div>
 
-    </section><!-- End Venue Section -->
+    </section> -->
+    <!-- End Venue Section -->
 
    
     <!-- ======= Subscribe Section ======= -->
-    <section id="subscribe">
+    <!-- <section id="subscribe">
       <div class="container" data-aos="zoom-in">
         <div class="section-header">
           <h2>Newsletter</h2>
@@ -495,7 +528,8 @@
         </form>
 
       </div>
-    </section><!-- End Subscribe Section -->
+    </section> -->
+    <!-- End Subscribe Section -->
 
     
 
@@ -506,7 +540,7 @@
 
         <div class="section-header">
           <h2>Contact Us</h2>
-          <p>Nihil officia ut sint molestiae tenetur.</p>
+          <!-- <p>Nihil officia ut sint molestiae tenetur.</p> -->
         </div>
 
         <div class="row contact-info">
@@ -515,7 +549,7 @@
             <div class="contact-address">
               <i class="bi bi-geo-alt"></i>
               <h3>Address</h3>
-              <address>A108 Adam Street, NY 535022, USA</address>
+              <address>Chomu Udaipuria Mod, Jaipur, Rajasthan</address>
             </div>
           </div>
 
@@ -523,7 +557,7 @@
             <div class="contact-phone">
               <i class="bi bi-phone"></i>
               <h3>Phone Number</h3>
-              <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+              <p><a href="tel:+91 12345678890">+91 12345678890</a></p>
             </div>
           </div>
 
@@ -531,7 +565,7 @@
             <div class="contact-email">
               <i class="bi bi-envelope"></i>
               <h3>Email</h3>
-              <p><a href="mailto:info@example.com">info@example.com</a></p>
+              <p><a href="mailto:eduhub.community@gmail.com">eduhub.community@gmail.com</a></p>
             </div>
           </div>
 
@@ -574,12 +608,12 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <img src="assets/img/logo.png" alt="TheEvenet">
-            <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore consequatur ad voluptate cupiditate debitis accusamus repellat cumque.</p>
+            <img src="assets/img/logo-bg.png" style="height: 80px;">
+            <!-- <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore consequatur ad voluptate cupiditate debitis accusamus repellat cumque.</p> -->
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Quick Access</h4>
             <ul>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
@@ -590,31 +624,31 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Our Outreach</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="https://linktr.ee/EduhubCommunity">Social Media</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="https://drive.google.com/file/d/1G3uDu9hbX7_oFa2B1bikeaTBPr2wBxs-/view">MSME</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="https://docs.google.com/document/d/1gHcw8HsAeLciSVOA_TXPIql9F362hPlC/edit">Code of Conduct</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="https://docs.google.com/forms/d/1XUnnCtcWtDgnCSQmBgqPjUQ6H5KlE8Ek1LJpXX76Hg4/viewform?edit_requested=true">Reach out to us for any Queries</a></li>
+              <!-- <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li> -->
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              Chomu Udaipuria Mod,<br>
+              Jaipur, Rajasthan, 
+              India <br>
+              <strong>Phone:</strong> +91 5589 55488<br>
+              <strong>Email:</strong> eduhubcommunity@gmail.com<br>
             </p>
 
             <div class="social-links">
               <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
               <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bi bi-instagram"></i></a>
+              <!-- <a href="#" class="google-plus"><i class="bi bi-instagram"></i></a> -->
               <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
 
