--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container-fluid container-xxl d-flex align-items-center">
 
       <div id="logo" class="me-auto" >
-        <a href="https://eduhubcommunity.tech">  <img src="/entrepreneurship-conference/assets/img/logo-bg.png" > </a>
+        <a href="https://eduhubcommunity.tech">  <img src="/assets/img/logo-bg.png" > </a>
         <!-- Uncomment below if you prefer to use a text logo -->
         <!-- <h1><a href="index.html">The<span>Event</span></a></h1>-->
         <!-- <a href="https://eduhubcommunity.tech" class="scrollto">EduHub Community</a> -->
