--- a/index.html
+++ b/index.html
@@ -457,8 +457,8 @@
 
     <div class="container" data-aos="fade-up">
       <div class="section-header">
-        <h2>Our Collaborators</h2>
-        <p>Organizations that believe in our Community </p>
+        <h2>Our Partners</h2>
+        <p>Organizations that believe in our Community</p>
       </div>
     </div>
 
