--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <section id="hero">
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
       <h1 class="mb-4 pb-0">The International <br><span>Entrepreneurship</span> Conference</h1>
-      <p class="mb-4 pb-0">26-28 March 2022, On Virtual Live Conference | To Empower Entrepreneurship across the globe</p>
+      <p class="mb-4 pb-0">15-17 April 2022, On Virtual Live Conference | To Empower Entrepreneurship across the globe</p>
       <a href="https://youtu.be/bUlPCdeKBi8" class="glightbox play-btn mb-4"></a>
       <a href="#about" class="about-btn scrollto">About the Event</a>
     </div>
@@ -103,15 +103,15 @@
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
-              <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+              <img src="assets/img/speakers/1602889149455.png" alt="Speaker 1" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Brenden Legros</a></h3>
-                <p>Quas alias incidunt</p>
+                <h3><a href="speaker-details.html">Ravi Goswami</a></h3>
+                <p>Co-Founder GiveMyCertificate</p>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/raviginfo/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
