--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
-              <img src="assets/img/speakers/camilo.jifif" alt="Speaker 3" class="img-fluid">
+              <img src="assets/img/speakers/camilo.jpg" alt="Speaker 3" class="img-fluid">
               <div class="details">
                 <h3><a href="speaker-details.html">Camilo Olarte</a></h3>
                 <p>CEO & Cofounder at Lokl</p>
