--- a/index.html
+++ b/index.html
@@ -172,13 +172,11 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
               <img src="assets/img/speakers/6.jpg" alt="Speaker 6" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Willow Trantow</a></h3>
-                <p>Non autem dicta</p>
+                <h3><a href="speaker-details.html">Rohit Sardana</a></h3>
+                <p>& CEO at Reskilll & Podcaster at TheTechPod</p>
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                 
+                  <a href="https://www.linkedin.com/in/rohitsardana/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
