--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
-              <img src="assets/img/speakers/6.jpg" alt="Speaker 6" class="img-fluid">
+              <img src="assets/img/speakers/rohitsardana.jpg" alt="Speaker 6" class="img-fluid">
               <div class="details">
                 <h3><a href="speaker-details.html">Rohit Sardana</a></h3>
                 <p>& CEO at Reskilll & Podcaster at TheTechPod</p>
