--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Event Schedule</h2>
-          <p>Here is our event schedule</p>
+          <p>Here is our event schedule Please stay tuned with us</p>
         </div>
 
         <ul class="nav nav-tabs" role="tablist" data-aos="fade-up" data-aos-delay="100">
@@ -222,24 +222,24 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10:00 AM</time></div>
+              <div class="col-md-2"><time>6:00PM IST </time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/1.jpg" alt="Brenden Legros">
+                  <img src="assets/img/speakers/1602889149455.png" alt="Brenden Legros">
                 </div>
-                <h4>Keynote <span>Brenden Legros</span></h4>
-                <p>Facere provident incidunt quos voluptas.</p>
+                <h4>Keynote <span>Ravi Goswami</span></h4>
+                <p>Ravi will discuss about His Startup Journey and share his experience as a entrepunure. </p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>11:00 AM</time></div>
+              <div class="col-md-2"><time>6:30 PM IST</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/2.jpg" alt="Hubert Hirthe">
+                  <img src="assets/img/speakers/ambika.jpg" alt="Hubert Hirthe">
                 </div>
-                <h4>Et voluptatem iusto dicta nobis. <span>Hubert Hirthe</span></h4>
-                <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
+                <h4>Ambika Prasanna Dhal <span>Hubert Hirthe</span></h4>
+                <p>Ambika will talk about his Edtech journey </p>
               </div>
             </div>
 
