--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
-              <img src="assets/img/speakers/rohitsardana.jpg" alt="Speaker 6" class="img-fluid">
+              <img src="assets/img/speakers/IMG-20220303-WA0013.jpg" alt="Speaker 6" class="img-fluid">
               <div class="details">
                 <h3><a href="speaker-details.html">Rohit Sardana</a></h3>
-                <p>& CEO at Reskilll & Podcaster at TheTechPod</p>
+                <p>Co-Founder & CEO at Reskilll & Podcaster at TheTechPod</p>
                 <div class="social">
                  
                   <a href="https://www.linkedin.com/in/rohitsardana/"><i class="bi bi-linkedin"></i></a>
