--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
-              <img src="assets/img/speakers/kunal.jpg" alt="Speaker 4" class="img-fluid">
+              <img src="assets/img/speakers/1602889149455.png" alt="Speaker 4" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Kounal Gupta</a></h3>
-                <p>Founder & CEOFounder & CEO Henry Harvin Education</p>
+                <h3><a href="speaker-details.html">Ravi Goswami</a></h3>
+                <p>Co-Founder GiveMyCertificate</p>
                 <div class="social">
                  
                   <a href="https://www.linkedin.com/in/guptakounal/"><i class="bi bi-linkedin"></i></a>
