--- a/speaker-details.html
+++ b/speaker-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>TheEvent Bootstrap Template - Speaker Details</title>
+  <title>Speaker Details</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -89,28 +89,26 @@
       <div class="container">
         <div class="section-header">
           <h2>Speaker Details</h2>
-          <p>Praesentium ut qui possimus sapiente nulla.</p>
+          <p>Our Knowledgeble Speakers for E Conference</p>
         </div>
 
         <div class="row">
           <div class="col-md-6">
-            <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+            <img src="assets/img/speakers/sandeeo.jpg" alt="Speaker 1" class="img-fluid">
           </div>
 
           <div class="col-md-6">
             <div class="details">
-              <h2>Brenden Legros</h2>
+              <h2>Sandeep jain</h2>
               <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
+               
+                <a href="https://www.linkedin.com/in/sandeep-jain-b3940815/"><i class="bi bi-linkedin"></i></a>
               </div>
-              <p>Voluptatem perferendis sed assumenda voluptatibus. Laudantium molestiae sint. Doloremque odio dolore dolore sit. Quae labore alias ea omnis ex expedita sapiente molestias atque. Optio voluptas et.</p>
+              <p> It all started when Sandeep Jain completed his post graduation from IIT Roorkee and eventually joined De Shaw & Co. During this transition process, he noticed a hugely worrying problem- unavailability of guidance, instructions and first-hand experiences to help prepare for the interviews of the top companies. Such was the dearth of required content that he took it upon himself to create a portal to help aspiring candidates achieve their goals. This is how globally trusted Interview preparation portal GeeksforGeeks was born in 2008.</p>
 
-              <p>Aboriosam inventore dolorem inventore nam est esse. Aperiam voluptatem nisi molestias laborum ut. Porro dignissimos eum. Tempore dolores minus unde est voluptatum incidunt ut aperiam.</p>
+              <p>In 2016, Sandeep Jain, Founder, GeeksforGeeks decided to expand the horizons of imparting value education and established a parent organisation by the name of Sanchhaya Education Pvt. Ltd, with the help of 2 interns. Since then, GeeksforGeeks has grown into a family of 150+ employees. Sandeep is an avid promoter of programming and likes to interact with students. He is also a TED speaker and utilizes all of these mediums to motivate each and every student he can reach..</p>
 
-              <p>Et dolore blanditiis officiis non quod id possimus. Optio non commodi alias sint culpa sapiente nihil ipsa magnam. Qui eum alias provident omnis incidunt aut. Eius et officia corrupti omnis error vel quia omnis velit. In qui debitis autem aperiam voluptates unde sunt et facilis.</p>
+            
             </div>
           </div>
 
