--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
               <img src="assets/img/speakers/kunal.jpg" alt="Speaker 6" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Rohit Sardana</a></h3>
-                <p>Co-Founder & CEO at Reskilll & Podcaster at TheTechPod</p>
+                <h3><a href="speaker-details.html">Kounal Gupta</a></h3>
+                <p>Founder & CEO Henry Harvin Education</p>
                 <div class="social">
                  
                   <a href="https://www.linkedin.com/in/rohitsardana/"><i class="bi bi-linkedin"></i></a>
