--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             
             <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
-              <img src="assets/img/speakers/IMG-20220303-WA0013.jpg" alt="Speaker 6" class="img-fluid">
+              <img src="assets/img/speakers/vc.ppg" alt="Speaker 6" class="img-fluid">
               <div class="details">
                 <h3><a href="speaker-details.html">Rohit Sardana</a></h3>
                 <p>Vice Chancellor IEM UEM Group Jaipur</p>
