--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
             
             <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
-              <img src="assets/img/speakers/vc.ppg" alt="Speaker 6" class="img-fluid">
+              <img src="assets/img/speakers/vc.png" alt="Speaker 6" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Rohit Sardana</a></h3>
+                <h3><a href="speaker-details.html">Prof. Dr Biswajoy Chatterjee</a></h3>
                 <p>Vice Chancellor IEM UEM Group Jaipur</p>
                 <div class="social">
                  
