--- a/speaker-details.html
+++ b/speaker-details.html
@@ -135,9 +135,7 @@
             <ul>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li>
+          
             </ul>
           </div>
 
@@ -155,11 +153,9 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              Jaipur Rajasthan<br>
+              <strong>Phone:</strong> 7584926589<br>
+              <strong>Email:</strong> eduhub.community@gmail.com<br>
             </p>
 
             <div class="social-links">
@@ -178,7 +174,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>TheEvent</strong>. All Rights Reserved
+        &copy; Copyright <strong>Eduhub Community</strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!--
