--- a/index.html
+++ b/index.html
@@ -256,10 +256,10 @@
               <div class="col-md-2"><time>6:00PM IST </time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/1602889149455.png" alt="Brenden Legros">
+                  <img src="assets/img/speakers/sandeep.jpg" alt="Brenden Legros">
                 </div>
-                <h4>Keynote <span>Ravi Goswami</span></h4>
-                <p>Ravi will discuss about His Startup Journey and share his experience as a entrepunure. </p>
+                <h4>Keynote <span>Sandeep Jain</span></h4>
+                <p>Sandeep Sir will discuss about His Startup Journey and share his experience as a entrepunure. </p>
               </div>
             </div>
 
@@ -267,33 +267,29 @@
               <div class="col-md-2"><time>6:30 PM IST</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/ambika.jpg" alt="Hubert Hirthe">
+                  <img src="assets/img/speakers/vc.png" alt="Hubert Hirthe">
                 </div>
-                <h4>Ambika Prasanna Dhal <span>Hubert Hirthe</span></h4>
-                <p>Ambika will talk about his Edtech journey </p>
+                <h4>Prof. Dr Biswajoy Chatterjee <span> </span></h4>
+                <p> He is the guest of our E Conference he will talk about importance of Entrepunership in our society  </p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>12:00 AM</time></div>
+              <div class="col-md-2"><time>6:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/3.jpg" alt="Cole Emmerich">
+                  <img src="assets/img/speakers/IMG-20220303-WA0013.jpg" alt="Cole Emmerich">
                 </div>
-                <h4>Explicabo et rerum quis et ut ea. <span>Cole Emmerich</span></h4>
-                <p>Veniam accusantium laborum nihil eos eaque accusantium aspernatur.</p>
+                <h4>Rohit Sardana </h4>
+                <p>Rohit will discuss about His <b>Startup </b> Journey and share his experience as a entrepunure.</p>
               </div>
             </div>
 
            
             <div class="row schedule-item">
-              <div class="col-md-2"><time>04:00 PM</time></div>
+              <div class="col-md-2"><time>6:00 PM</time></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <img src="assets/img/speakers/6.jpg" alt="Willow Trantow">
-                </div>
-                <h4>Quo qui praesentium nesciunt <span>Willow Trantow</span></h4>
-                <p>Voluptatem et alias dolorum est aut sit enim neque veritatis.</p>
+               
               </div>
             </div>
 
