--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a class="buy-tickets scrollto" href="#speakers">Explore our Event</a>
+      <a class="buy-tickets scrollto" href="https://forms.gle/cBsvZ6uq1yZKcd3o9">Register Now</a>
 
     </div>
   </header><!-- End Header -->
@@ -63,7 +63,7 @@
       <h1 class="mb-4 pb-0">The International <br><span>Entrepreneurship</span> Conference</h1>
       <p class="mb-4 pb-0">15-17 April 2022, On Virtual Live Conference | To Empower Entrepreneurship across the globe</p>
       <a href="https://youtu.be/bUlPCdeKBi8" class="glightbox play-btn mb-4"></a>
-      <a href="#about" class="about-btn scrollto">About the Event</a>
+      <a href="https://forms.gle/cBsvZ6uq1yZKcd3o9" class="about-btn scrollto">Register for the Event</a>
     </div>
   </section><!-- End Hero Section -->
 
@@ -82,7 +82,7 @@
           </div>
           <div class="col-lg-3">
             <h3>Where</h3>
-            <p>Virtual Mode , India</p>
+            <p>Virtual Mode (Youtube) , India</p>
           </div>
           <div class="col-lg-3">
             <h3>When</h3>
