--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
               <div class="col-md-2"><time>Starting Soon !!</time></div>
               <div class="col-md-10">
                 <h4>Registration</h4>
-                <p>Upskill and gain industry knowledge from the experts Register Now </p>
+                <p>Upskill and gain industry knowledge from the experts so don't waste your time Register Now </p>
               </div>
             </div>
 
@@ -259,18 +259,18 @@
                   <img src="assets/img/speakers/sandeep.jpg" alt="Brenden Legros">
                 </div>
                 <h4>Keynote <span>Sandeep Jain</span></h4>
-                <p>Sandeep Sir will discuss about His Startup Journey and share his experience as a entrepunure. </p>
+                <p>Sandeep Sir will discuss about His Startup Journey and share his experience as a ENTREPRENEUR, also Startup in College.  </p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>6:30 PM IST</time></div>
+              <div class="col-md-2"><time>6:00 PM IST</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="assets/img/speakers/vc.png" alt="Hubert Hirthe">
                 </div>
                 <h4>Prof. Dr Biswajoy Chatterjee <span> </span></h4>
-                <p> He is the guest of our E Conference he will talk about importance of Entrepunership in our society  </p>
+                <p> He is the guest of our E Conference he will talk about importance of Entrepunership in our society and Startup in College  </p>
               </div>
             </div>
 
@@ -300,13 +300,13 @@
           <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10:00 AM</time></div>
+              <div class="col-md-2"><time>6:00 PM IST</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/1.jpg" alt="Brenden Legros">
+                  <img src="assets/img/speakers/camilo.jpg" alt="Brenden Legros">
                 </div>
-                <h4>Libero corrupti explicabo itaque. <span>Brenden Legros</span></h4>
-                <p>Facere provident incidunt quos voluptas.</p>
+                <h4>Camilo Olarte</h4>
+                <p>.</p>
               </div>
             </div>
 
@@ -314,7 +314,7 @@
               <div class="col-md-2"><time>11:00 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/2.jpg" alt="Hubert Hirthe">
+                  <img src="assets/img/speakers/jason.jpg" alt="Hubert Hirthe">
                 </div>
                 <h4>Et voluptatem iusto dicta nobis. <span>Hubert Hirthe</span></h4>
                 <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
