--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 <div class="speaker">
                   <img src="assets/img/speakers/sandeep.jpg" alt="Brenden Legros">
                 </div>
-                <h4>Keynote <span>Sandeep Jain</span></h4>
+                <h4>Sandeep Jain</h4>
                 <p>Sandeep Sir will discuss about His Startup Journey and share his experience as a ENTREPRENEUR, also Startup in College.  </p>
               </div>
             </div>
@@ -306,22 +306,22 @@
                   <img src="assets/img/speakers/camilo.jpg" alt="Brenden Legros">
                 </div>
                 <h4>Camilo Olarte</h4>
-                <p>.</p>
+                <p>Camilo will discuss about funding and how to generate fund at the initial stage of a startup and many more.</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>11:00 AM</time></div>
+              <div class="col-md-2"><time>6:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="assets/img/speakers/jason.jpg" alt="Hubert Hirthe">
                 </div>
-                <h4>Et voluptatem iusto dicta nobis. <span>Hubert Hirthe</span></h4>
-                <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
+                <h4> Jason Cavness </h4>
+                <p>Jason will discuss about team management of a startup/company and many more.</p>
               </div>
             </div>
 
-            <div class="row schedule-item">
+            <!--<div class="row schedule-item">
               <div class="col-md-2"><time>12:00 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
@@ -363,7 +363,7 @@
                 <h4>Quo qui praesentium nesciunt <span>Willow Trantow</span></h4>
                 <p>Voluptatem et alias dolorum est aut sit enim neque veritatis.</p>
               </div>
-            </div>
+            </div> -->
 
           </div>
           <!-- End Schdule Day 2 -->
@@ -372,39 +372,39 @@
           <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10:00 AM</time></div>
+              <div class="col-md-2"><time>6:00 PM(IST)</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/2.jpg" alt="Hubert Hirthe">
+                  <img src="assets/img/speakers/ambika.jpg" alt="Hubert Hirthe">
                 </div>
-                <h4>Et voluptatem iusto dicta nobis. <span>Hubert Hirthe</span></h4>
-                <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
+                <h4>Ambika Prasanna Dhal</h4>
+                <p>He will talk about opportunities in Edutech ..</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>11:00 AM</time></div>
+              <div class="col-md-2"><time>6:00 PM (IST)</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/3.jpg" alt="Cole Emmerich">
+                  <img src="assets/img/speakers/1602889149455.png" alt="Cole Emmerich">
                 </div>
-                <h4>Explicabo et rerum quis et ut ea. <span>Cole Emmerich</span></h4>
-                <p>Veniam accusantium laborum nihil eos eaque accusantium aspernatur.</p>
+                <h4>Ravi Goswami</h4>
+                <p>He will discuss about Idea v/s execution and importance of documentation in startups.</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>12:00 AM</time></div>
+              <div class="col-md-2"><time>6:00 PM(IST)</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/1.jpg" alt="Brenden Legros">
+                  <img src="assets/img/speakers/kunal.jpg" alt="Brenden Legros">
                 </div>
-                <h4>Libero corrupti explicabo itaque. <span>Brenden Legros</span></h4>
-                <p>Facere provident incidunt quos voluptas.</p>
+                <h4>Kounal Gupta</h4>
+                <p>He will talk about opportunities in Edutech ..</p>
               </div>
             </div>
 
-            <div class="row schedule-item">
+            <!--<div class="row schedule-item">
               <div class="col-md-2"><time>02:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
@@ -435,7 +435,7 @@
                 <h4>Quo qui praesentium nesciunt <span>Willow Trantow</span></h4>
                 <p>Voluptatem et alias dolorum est aut sit enim neque veritatis.</p>
               </div>
-            </div>
+            </div>-->
 
           </div>
           <!-- End Schdule Day 2 -->
