--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
           <div class="col-lg-3">
             <h3>When</h3>
-            <p>Friday to Sunday <br>15-17 April 2022</p>
+            <p><br>Coming Soon !!</p>
           </div>
         </div>
       </div>
